--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
         <div class="row">
             <div class="col-lg-5">
                 <div class="exposed-text">
-                    We want to learn new things, to increase our knowledge.
-                    Here are the products of our learning.
-                </div>
+                    <!-- We want to learn new things, to increase our knowledge.
+                    Here are the products of our learning. -->
+                    <span class="align-left">We</span>
+                    <span class="align-left">design & develop</span>
+                    <span class="align-left">with user expirience </span>
+                    <span class="align-left">in our minds</span>
+                    <!-- Taste our framework and apps, you will never eat anything else. -->
+                    </div>
             </div>
             <div class="col-lg-7">
                 <div>
