--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- The below 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta charset="utf-8">
@@ -12,123 +13,115 @@
     <title>DvaBita</title>
 
     <!-- Core CSS -->
+    <link href="lib/normalize-css/normalize.css" rel="stylesheet">
     <link href="lib/fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lib/icomoon/css/style.css" rel="stylesheet">
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <link href="css/theme.css" rel="stylesheet">
-
+    <link href="css/2b-grid.css" rel="stylesheet">
+    <link href="css/2b-grid-utils.css" rel="stylesheet">
+    <link href="css/2b-keep-footer-bottom.css" rel="stylesheet">
+    <link href="css/2b-theme.css" rel="stylesheet">
+    <link href="https://s3-us-west-2.amazonaws.com/pesticide/1.2.0/pesticide.min.css1" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+          <![endif]-->
 </head>
-<body class="body-section" data-spy="scroll" data-target=".navbar-inverse" data-offset="9">
-    <nav class="navbar-inverse navbar-fixed-top">
-        <div class="background-black-alpha48">
-            <div class="container">
-                <div class="navbar-header">
-                    <!--Tole je najbrz collapsed menu, omogoči če se bo potrebovalo-->
-                    <!--<button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>-->
-                    <img class="logo" src="img/LogoThumbnail.png" />
-                    <!-- <a class="brand-text link" href="#">
-                        <span>DvaBita</span>
-                    </a> -->
-                </div>
-            </div>
+
+<body>
+    <nav>
+        <div class="container">
+            <img class="logo" src="img/LogoThumbnail.png" />
         </div>
     </nav>
-    <div class="container container-first">
-        <div class="row">
-            <div class="col-lg-5">
-                <div class="exposed-text">
-                    <!-- We want to learn new things, to increase our knowledge.
-                    Here are the products of our learning. -->
-                    <span class="align-left">We</span>
-                    <span class="align-left">design & develop</span>
-                    <span class="align-left">with user expirience </span>
-                    <span class="align-left">in our minds</span>
-                    <!-- Taste our framework and apps, you will never eat anything else. -->
-                    </div>
+    <div class="container row">
+        <div class="col m5 pad-bottom-2x m-pad-right-2x">
+            <div class="exposed-text">
+                <span>We</span>
+                <span>design & develop</span>
+                <span>with user expirience</span>
+                <span>in our minds</span>
             </div>
-            <div class="col-lg-7">
-                <div>
-                    <div class="project-top-space"></div>
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <img class="project-icon" src="img/SunIcon.svg" />
-                        </div>
-                        <div class="col-lg-9">
-                            <div class="project-label">UV Index</div>
-                            <div class="project-description">Displays daily UV index value for your current location.</div>
-                            <div class="project-description-bottom-space"></div>
-                            <div class="project-link">
-                                <span>Get it on</span>
-                                <a class="project-link link project-text-spacebefore-large" href="https://www.microsoft.com/store/apps/9nblggh0dppz">
-                                    <i class="fa fa-windows fa-spaceafter"></i>
-                                    <span>Windows Store</span>
-                                </a>
-                            </div>
-                        </div>
+        </div>
+        <div class="col m7">
+            <div class="row">
+                <div class="row">
+                    <div class="col s2 m3 s-pad-bottom-2x">
+                        <img class="project-icon" src="img/SunIcon.svg" />
                     </div>
-                    <div class="project-top-space"></div>
-                    <div class="row">
-                        <div class="col-lg-3">
-                            <img class="project-icon" src="img/FrameworkIcon.svg" />
-                        </div>
-                        <div class="col-lg-9">
-                            <div class="project-label">UAAA</div>
-                            <div class="project-description">UAAA is a small framework that focuses on business logic and MVVM pattern. Also contains components and base classes that simplify developers everyday tasks.</div>
-                            <div class="project-description-bottom-space"></div>
-                            <div class="project-link">
-                                <span>Get it on</span>
-                                <a class="link project-text-spacebefore-large" href="https://github.com/Headspin/uaaa">
-                                    <i class="fa fa-github fa-spaceafter"></i>
-                                    <span>GitHub</span>
-                                </a>
-                                <span class="project-text-spacebefore">or</span>
-                                <a class="link project-text-spacebefore" href="https://www.nuget.org/packages/Uaaa/">Nuget</a>
-                            </div>
+                    <div class="col s10 m9 pad-bottom-2x">
+                        <div class="project-name">UV Index</div>
+                        <div class="project-description">Displays daily UV index value for your current location.</div>
+                        <div class="project-links">
+                            <span>Get it on</span>
+                            <a href="https://www.microsoft.com/store/apps/9nblggh0dppz">
+                                <i class="fa fa-windows"></i>
+                                <span>Windows Store</span>
+                            </a>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col s2 m3 s-pad-bottom-2x">
+                        <img class="project-icon" src="img/FrameworkIcon.svg" />
+                    </div>
+                    <div class="col s10 m9 pad-bottom-2x">
+                        <div class="project-name">UAAA</div>
+                        <div class="project-description">
+                            UAAA is a small framework that focuses on business logic and MVVM pattern. Also contains components and base classes that
+                            simplify developers everyday tasks.
+                        </div>
+                        <div class="project-links">
+                            <span>Get it on</span>
+                            <a href="https://github.com/Headspin/uaaa">
+                                <i class="fa fa-github"></i>
+                                <span>GitHub</span>
+                            </a>
+                            <span>or</span>
+                            <a href="https://www.nuget.org/packages/Uaaa/">Nuget</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
             </div>
         </div>
     </div>
-    <div class="push-footer"></div>
     <footer>
-        <div id="footer" class="container">
-            <!-- <img class="footer-logo" src="img/LogoThumbnail.png" /> -->
-            <div class="footer-text-normal">
-                <a class="link" href="mailto:dvabita@outlookdotcom">
-                    <i class="fa fa-envelope-o"></i><span class="link-text">dvabita@outlookdotcom</span>
+        <div class="container row">
+            <script type="text/javascript">
+                function ExecuteSecret()
+                {
+                    var Base64 = { _keyStr: "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=", encode: function (e) { var t = ""; var n, r, i, s, o, u, a; var f = 0; e = Base64._utf8_encode(e); while (f < e.length) { n = e.charCodeAt(f++); r = e.charCodeAt(f++); i = e.charCodeAt(f++); s = n >> 2; o = (n & 3) << 4 | r >> 4; u = (r & 15) << 2 | i >> 6; a = i & 63; if (isNaN(r)) { u = a = 64 } else if (isNaN(i)) { a = 64 } t = t + this._keyStr.charAt(s) + this._keyStr.charAt(o) + this._keyStr.charAt(u) + this._keyStr.charAt(a) } return t }, decode: function (e) { var t = ""; var n, r, i; var s, o, u, a; var f = 0; e = e.replace(/[^A-Za-z0-9\+\/\=]/g, ""); while (f < e.length) { s = this._keyStr.indexOf(e.charAt(f++)); o = this._keyStr.indexOf(e.charAt(f++)); u = this._keyStr.indexOf(e.charAt(f++)); a = this._keyStr.indexOf(e.charAt(f++)); n = s << 2 | o >> 4; r = (o & 15) << 4 | u >> 2; i = (u & 3) << 6 | a; t = t + String.fromCharCode(n); if (u != 64) { t = t + String.fromCharCode(r) } if (a != 64) { t = t + String.fromCharCode(i) } } t = Base64._utf8_decode(t); return t }, _utf8_encode: function (e) { e = e.replace(/\r\n/g, "\n"); var t = ""; for (var n = 0; n < e.length; n++) { var r = e.charCodeAt(n); if (r < 128) { t += String.fromCharCode(r) } else if (r > 127 && r < 2048) { t += String.fromCharCode(r >> 6 | 192); t += String.fromCharCode(r & 63 | 128) } else { t += String.fromCharCode(r >> 12 | 224); t += String.fromCharCode(r >> 6 & 63 | 128); t += String.fromCharCode(r & 63 | 128) } } return t }, _utf8_decode: function (e) { var t = ""; var n = 0; var r = c1 = c2 = 0; while (n < e.length) { r = e.charCodeAt(n); if (r < 128) { t += String.fromCharCode(r); n++ } else if (r > 191 && r < 224) { c2 = e.charCodeAt(n + 1); t += String.fromCharCode((r & 31) << 6 | c2 & 63); n += 2 } else { c2 = e.charCodeAt(n + 1); c3 = e.charCodeAt(n + 2); t += String.fromCharCode((r & 15) << 12 | (c2 & 63) << 6 | c3 & 63); n += 3 } } return t } };
+                    var secret = "ZbWFpbHRvOmR2YWJpdGFQAb3V0bG9vay5jb20=";
+                    window.location = (Base64.decode(secret.replace("Z", "").replace("Q", "")));
+                }
+            </script>
+            <div class="col links">
+                <a onclick="ExecuteSecret();" href="#" title="Click to send us email.">
+                    <i class="fa fa-envelope"></i>
+                </a>
+                <a href="https://twitter.com/_dvabita" title="Visit us on twitter.">
+                    <i class="fa fa-twitter"></i>
                 </a>
             </div>
-            <div class="footer-text-normal">
-                <a class="link" href="https://twitter.com/_dvabita">
-                    <i class="fa fa-twitter"></i><span class="link-text">@_dvabita</span>
-                </a>
+            <div class="col copyright">
+                &copy; DvaBita
+                <script>
+                    document.write(new Date().getFullYear())
+                </script>
             </div>
-            <div class="footer-text-copyright">&copy; DvaBita <script>document.write(new Date().getFullYear())</script></div>
-            <div class="footer-text-disclaimer">Our website doesn't use cookies to improve your experience, we do this.</div>
+            <div class="col claim">
+                Our website doesn't use cookies to improve your experience, we do this.
+            </div>
         </div>
     </footer>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+    <div class="debug-info1 container-size"></div>
+    <div class="debug-info2">
+        <script type="text/javascript">
+            document.write(screen.width + 'x' + screen.height);
+        </script>
+    </div>
 </body>
-</html>
 
+</html>
